@@ -78,6 +78,7 @@ Cacti CHANGELOG
 -feature: Add Graph and Data Source counts to Device page
 -feature: Add Poller Interval to Data Sources page
 -feature: Keep filters aligned with main page content on window resize
+-feature: Add Enable/Disable user
 -compat: Add additional checking due to php-snmp changes in Windows
 
 0.8.6j
